<resources>
    <string name="app_name">KFH Converter</string>
    <string name="enter_iban">Enter IBAN</string>
    <string name="validate">Validate</string>
    <string name="kuwait_dinar">Kuwaiti Dinar (KWD)</string>
    <string name="currency_symbol_placeholder">%s (%s)</string>
    <string name="exchange_rate_placeholder">Exchange Rate: %s</string>
    <string name="invalid_iban">Invalid IBAN</string>
    <string name="valid_iban">Valid IBAN</string>
    <string name="please_wait">Please Wait…</string>
    <string name="iban">IBAN:</string>
    <string name="bank">Bank:</string>
    <string name="country">Country:</string>
    <string name="check_sum">CheckSum:</string>
    <string name="bank_code">Bank Code:</string>
    <string name="account_number">Account Number:</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="name">Name:</string>
    <string name="city">City:</string>
    <string name="zip">Zip:</string>
    <string name="bic">BIC:</string>
    <string name="select">Select</string>
    <string name="no_exchange_rates_available">No Exchange available</string>
    <string name="please_enter_iban_no">Please Enter Iban</string>
    <string name="noConnectionTitle">No Internet Connection</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="alert_message_not_able_to_connect_internet">Unable to connect to the internet.Please try again later</string>

</resources>