<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.text.TextUtils"/>
        <variable
            name="viewModel"
            type="com.kfh.converter.view.converter.ConverterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.converter.ConverterFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_iban"
            style="@style/AppTextInputOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="80dp"
            android:hint="@string/enter_iban"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/validate"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/ed_iban" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_from_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_currency_border"
            app:layout_constraintTop_toBottomOf="@id/btn_validate">

            <EditText
                android:id="@+id/ed_from_currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:textSize="12sp"
                android:gravity="center"
                android:background="@null"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/from_currency_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/from_currency_divider"
                android:layout_width=".5dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_from_currency"
                android:background="@color/light_grey"/>

            <TextView
                android:id="@+id/tv_from_currency_symbol"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center"
                android:maxLines="1"
                android:text="@{TextUtils.isEmpty(viewModel.exchangeRateFlow.name)? @string/select: @string/currency_symbol_placeholder(viewModel.exchangeRate.name,viewModel.exchangeRate.code)}"
                android:drawableEnd="@drawable/ic_drop_down"
                android:paddingHorizontal="8dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/guideline_from_currency"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Euro" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_from_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".3" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_to_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_currency_border"
            app:layout_constraintTop_toBottomOf="@id/cl_from_currency">

            <EditText
                android:id="@+id/ed_to_currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:background="@null"
                android:textSize="12sp"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/to_currency_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="12.0"/>

            <View
                android:id="@+id/to_currency_divider"
                android:layout_width=".5dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_to_currency"
                android:background="@color/light_grey"/>

            <TextView
                android:id="@+id/tv_to_currency_symbol"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center"
                android:text="@string/kuwait_dinar"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/guideline_to_currency"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_to_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="109dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>